crates/ruff_linter/src/rules/odoo/snapshots/ruff_linter__rules__odoo__tests__method_compute.py.snap
---
source: crates/ruff_linter/src/rules/odoo/mod.rs
---
ODC8108 Name of compute method should start with "_compute_"
 --> method_compute.py:4:34
  |
2 |     _inherit = "my.model"
3 |
4 |     total = fields.Float(compute="_get_total")
  |                                  ^^^^^^^^^^^^
5 |     subtotal = fields.Float(compute="_compute_subtotal")
6 |     grand_total = fields.Float(compute=f"_get_grand_total")
  |

ODC8108 Name of compute method should start with "_compute_"
 --> method_compute.py:6:40
  |
4 |     total = fields.Float(compute="_get_total")
5 |     subtotal = fields.Float(compute="_compute_subtotal")
6 |     grand_total = fields.Float(compute=f"_get_grand_total")
  |                                        ^^^^^^^^^^^^^^^^^^^
7 |     net_total = fields.Float(compute=f"_compute_net_total")
  |
