crates/ruff_linter/src/rules/odoo/snapshots/ruff_linter__rules__odoo__tests__method_required_super_configured.snap
---
source: crates/ruff_linter/src/rules/odoo/mod.rs
---
ODW8106 Missing `super` call in "write" method
 --> method_required_super.py:4:9
  |
2 |     _inherit = "my.model"
3 |
4 |     def write(self, vals):
  |         ^^^^^
5 |         return True
  |

ODW8106 Missing `super` call in "write" method
  --> method_required_super.py:57:9
   |
55 |         self.env.cr.execute("CREATE INDEX ...")
56 |
57 |     def write(self, vals):
   |         ^^^^^
58 |         return True
   |
