crates/ruff_linter/src/rules/odoo/snapshots/ruff_linter__rules__odoo__tests__method_search.py.snap
---
source: crates/ruff_linter/src/rules/odoo/mod.rs
---
ODC8109 Name of search method should start with "_search_"
 --> method_search.py:4:33
  |
2 |     _inherit = "my.model"
3 |
4 |     total = fields.Float(search="_find_total")
  |                                 ^^^^^^^^^^^^^
5 |     subtotal = fields.Float(search="_search_subtotal")
6 |     grand_total = fields.Float(search=f"_find_grand_total")
  |

ODC8109 Name of search method should start with "_search_"
 --> method_search.py:6:39
  |
4 |     total = fields.Float(search="_find_total")
5 |     subtotal = fields.Float(search="_search_subtotal")
6 |     grand_total = fields.Float(search=f"_find_grand_total")
  |                                       ^^^^^^^^^^^^^^^^^^^^
7 |     net_total = fields.Float(search=f"_search_net_total")
  |
