crates/ruff_linter/src/rules/odoo/snapshots/ruff_linter__rules__odoo__tests__missing_odoo_file_missing.snap
---
source: crates/ruff_linter/src/rules/odoo/mod.rs
---
ODOO066 Missing missing/static/description/index.html file
 --> __manifest__.py:2:5
  |
1 | {
2 |     "name": "Module without the required description page",
  |     ^^^^^^
3 |     "version": "17.0.1.0.0",
4 | }
  |
